Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56489

When drawing an image that has a depth of 1 to a PDF then it assumes that one of the colors represents transparent, even though this is not the case

    XMLWordPrintable

Details

    • b38145a11d03c3e3fe8baf37800a017359283861

    Description

      When drawing an image that has a depth of 1 to a PDF then it assumes that one of the colors represents transparent, even though this is not the case

      Attachments

        1. main.cpp
          2 kB
        2. qtbug56489.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            andysh Andy Shaw
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes